# urjc-gia-pln-i

./: .gitignore  README.md
01-introduccion-pln/: README.md
02-analisis-textual/: README.md  pyproject.toml
02-analisis-textual/data/: crisisUcrania.txt
02-analisis-textual/notebooks/: 02_01_analisis_nltk.ipynb  02_02_analisis_spacy.ipynb  02_03_analisis_sintactico.ipynb  02_04_expresiones_regulares.ipynb  02_05_analisis_wordnet.ipynb  02_06_recursos_linguisticos.ipynb
03-representacion-texto/: README.md  pyproject.toml
03-representacion-texto/notebooks/: 03_01_bolsa_palabras.ipynb  03_02_matriz_coocurrencias.ipynb  03_03_modelos_latentes.ipynb  03_04_embeddings_estaticos.ipynb  03_05_embeddings_estaticos_plus.ipynb  03_06_recuperacion_informacion.ipynb  03_07_embeddings_contextuales.ipynb
04-redes-neuronales/: README.md
04-redes-neuronales/notebooks/: 04_01_mlp_cnn.ipynb  04_02_rnn_lstm.ipynb
05-transformers/: README.md  pyproject.toml
05-transformers/notebooks/: 05_03_sbert.ipynb
06-aumento-datos/: README.md  pyproject.toml
06-aumento-datos/notebooks/: 06_01_aumento_datos.ipynb
07-entidades-nombradas/: README.md  pyproject.toml
07-entidades-nombradas/notebooks/: 07_01_ner.ipynb
