[project]
name = "02-analisis-textual"
version = "0.1.0"
description = "Análisis textual y recursos lingüísticos"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "jupyterlab>=4.0.0",
    "ipywidgets>=8.0.0",
    "ipykernel>=6.0.0",
    "nltk>=3.8.0",
    "spacy>=3.7.0",
    "es-core-news-sm",
    "es-core-news-md",
    "en-core-web-sm",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
]

[tool.uv.sources]
es-core-news-sm = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_sm-3.8.0/es_core_news_sm-3.8.0-py3-none-any.whl" }
es-core-news-md = { url = "https://github.com/explosion/spacy-models/releases/download/es_core_news_md-3.8.0/es_core_news_md-3.8.0-py3-none-any.whl" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
